stocking-app/src/index.css
@import url('https://fonts.googleapis.com/css?family=Roboto&display=swap');

* {
  margin: 0;
}

body {
  font-family: 'Roboto', 'Helvetica Neue', sans-serif;
}

input:focus {
  outline-width: 0px;
}

.header {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: space-between;
  margin: 40px 72px 36px;
}

.hero {
  margin-right: 24px;
  font-size: 64px;
  color: #FFCD06;
}

#search {
  width: 200px;
  height: 40px;
}

#searchbar {
  padding-left: 12px;
  padding-right: 12px;
  width: 85%;
  height: 36px;
  font-size: 20px;
  border-radius: 24px;
}

#searchbar::placeholder {
  font-style: italic;
}

#stockInfo {
  clear: both;
  display: block;
  padding: 40px 100px;
}
.green-stockInfo {
  background-color: #F3FFFC;
}
.red-stockInfo {
  background-color: #FFF8F8;
}

#stockInfoTop {
  display: flex;
  flex-direction: column;
  flex-wrap: wrap;
  margin-bottom: 20px;
  height: 112px;
  
  font-size: 40px;
  font-weight: 900;
}
.green-stockInfoTop {
  color: #00C389;
}
.red-stockInfoTop {
  color: #FF4A4A;
}

.stockInfoTop-left {
  text-align: left;
}
.stockInfoTop-right {
  text-align: right;
}

#stockInfoName {
  width: 70%;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

#stockDataBank {
  display: flex;
  flex-direction: column;
  align-content: space-between;
  flex-wrap: wrap;
  margin-bottom: 20px;
  height: 50px;
}

.stockDatum {
  display: flex;
  flex-direction: row;
  width: 200px;
  font-size: 20px;
}
.datumLabel {
  flex-grow: 1;
  text-align: left;
  font-weight: bold;
}
.datumValue {
  flex-grow: 1;
  text-align: right;
}

.watchlist {
  padding: 40px 72px;
}

.watchlist .prompt {
  font-size: 32px;
  font-weight: 500;
}

.watchlist .stocks {
  display: flex;
  flex-wrap: wrap;
  flex-direction: row;
  justify-content: flex-start;
}

.stockCard {
  /* width: 264px; */
  width: 24.5%;
  height: 76px;
  margin-top: 32px;
  margin-right: 1%;
  
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  
  border-style: solid;
  border-radius: 22px;
  border-width: 2px;
  box-shadow: 0px 4px 6px grey;
  
  cursor: pointer;
  
  font-size: 20px;
}

.green-stockCard {
  border-color: #00C389;
  color: #00C389;
}
.green-stockCard:hover {
  background-color: #F3FFFC;
}

.red-stockCard {
  border-color: #FF4A4A;
  color: #FF4A4A;
}
.red-stockCard:hover {
  background-color: #FFF8F8;
}

.stockCard-name {
  margin: 12px 20px 0;
  flex-basis: 100%;
  color: black;

  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}
.stockCard-symbol {
  text-align: left;
  margin-left: 20px;
  flex-grow: 1;
  margin-bottom: 12px;
}
.stockCard-change {
  text-align: right;
  margin-right: 20px;
  flex-grow: 1;
  margin-bottom: 12px;
}

@media screen and (max-width:1200px) {
  .stockCard {
    width: 32%;
    margin-right: 1%;
  }
}

/* tablet portrait */
@media screen and (max-width:900px) {
  .hero {
    font-size: 56px;
  }
  
  #search {
    width: 160px;
  }
  #stockInfo {
    padding: 40px 72px;
  }
  #stockDataBank {
    height: auto;
  }
  .stockDatum {
    width: 100%;
  }
  .stockCard {
    width: 45%;
    margin-right: 5%;
  }
  /* phone portrait */
  @media screen and (max-width:600px) {
    .header {
      margin: 40px 32px 36px;
    }

    .hero {
      margin-bottom: 12px;
      font-size: 36px;
    }
    #stockInfo {
      padding: 40px 32px;
    }
    #stockInfoTop {
      font-size: 24px;
      font-weight: 900;
      height: 70px;

    }

    .watchlist {
      padding: 40px 32px;
    }
    .watchlist .prompt {
      font-size: 24px;
    }
    .stockCard {
      width: 100%;
    }
  }
}

